# PySeq2500

./: .gitignore  pyproject.toml
.github/ISSUE_TEMPLATE/: 01_bug_report.yaml
.github/workflows/: pull_requests.yml  python-publish.yml
notebooks/: ImageTetraSpeck.ipynb
src/pyseq2500/: __init__.py  autofocus.py  camera.py  com.py  flowcell.py  fluidics.py  fpga.py  laser.py  led.py  microscope.py  optics.py  sequencer.py  stages.py  tiltstage.py  utils.py  xstage.py  ystage.py  zstage.py
src/pyseq2500/resources/: default.toml  machine_settings.yaml  test_experiment.toml
tests/: conftest.py  test_autofocus.py  test_cameras.py  test_core.py  test_flowcell.py  test_fluidics.py  test_fpga.py  test_lasers.py  test_microscope.py  test_stages.py  test_utils.py
