[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"

[project]
name = "pyseq2500"  
version = "v0.0.0-alpha" 
authors = [
  { name="Kunal Pandit", email="kpandit8387@gmail.com" }, 
]
description = "Open source control sofware for Illumina HiSeq 2500"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "aioserial>=1.3.1",
    "attrs>=25.3.0",
    "imageio>=2.37.2",
    "jupyterlab>=4.5.6",
    "matplotlib>=3.8.0",
    "numpy>=2.4.1",
    "pydantic>=2.11.7",
    "pyseq-core",
    "pyseq-image",
    "pyyaml>=6.0.2",
    "scikit-image>=0.21.0",
    "scikit-learn>=1.8.0",
    "tomlkit>=0.13.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pooch>=1.8.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.0",
    "ruff>=0.12.4",
    "ty>=0.0.1a15",
]

[tool.uv.sources]
#pyseq_core = { git = "https://github.com/ReGenSeq/pyseq_core"}
#pyseq-image = { git = "https://github.com/nygctech/pyseq-image.git" }
pyseq-image = { path = "../pyseq-image", editable = true }
pyseq_core = { path = "../pyseq_core", editable = true }

[project.urls]
Homepage = "https://github.com/PySeqEcosystem"
Issues = "https://github.com/PySeqEcosystem/pyseq2500"


[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests",]
log_cli = true
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_cli_level = "DEBUG"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
addopts = '-k "not hardware and not slow"'
markers = """
    fpga: run test on fpga instruments
    stage: run test on stages
    hardware: run test on physical sequencer hardware
    fluidic: tests involving fluidic components
    optical: tests involving optical components
    camera: test involving cameras
    temperature: tests involving temperature controlling components
    microscope: test microscope system
    control: tests involving only control routines, no hardware
    mock: tests using mock or emulated instruments
    diagnostic: quick test to check health of instrumentation
    slow: slow tests 
    """

[tool.pyright]
reportIncompatibleMethodOverride = false
exclude = ["**/tests/**"]
