[build-system]
requires = ["uv_build>=0.11.18,<0.12.0"]
build-backend = "uv_build"

[project]
name = "pyseq2500"  
version = "v0.0.0-alpha" 
authors = [
  { name="Kunal Pandit", email="kpandit8387@gmail.com" }, 
]
description = "Open source control sofware for Illumina HiSeq 2500"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "aioserial>=1.3.1",
    "attrs>=26.1.0",
    "imageio>=2.37.3",
    "jupyterlab>=4.5.7",
    "numpy>=2.4.6",
    "pydantic>=2.13.4",
    "pyseq-core",
    "pyyaml>=6.0.2",
    "tomlkit>=0.15.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.15",
    "ty>=0.0.42",
]

[tool.uv.sources]
pyseq_core = { git = "https://github.com/ReGenSeq/pyseq_core"}
#pyseq_core = { path = "../pyseq_core", editable = true }

[project.urls]
Homepage = "https://github.com/PySeqEcosystem"
Issues = "https://github.com/PySeqEcosystem/pyseq2500"


[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests",]
log_cli = true
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_cli_level = "DEBUG"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
addopts = '-k "not hardware and not slow"'
markers = """
    fpga: run test on fpga instruments
    stage: run test on stages
    hardware: run test on physical sequencer hardware
    fluidic: tests involving fluidic components
    optical: tests involving optical components
    camera: test involving cameras
    temperature: tests involving temperature controlling components
    microscope: test microscope system
    control: tests involving only control routines, no hardware
    mock: tests using mock or emulated instruments
    diagnostic: quick test to check health of instrumentation
    slow: slow tests 
    """

[tool.pyright]
reportIncompatibleMethodOverride = false
exclude = ["**/tests/**"]
